# HAL2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
abstract/: CMakeLists.txt
abstract/hal/: callback.h  clocks.h  dma.h  i2c.h  i2s.h  peripheral.h  pin.h  pin_interrupts.h  spi.h  system.h  tim.h  uart.h
abstract/hal_mod/: clocks.cppm  dma.cppm  i2s.cppm  peripheral.cppm  pin.cppm  pin_interrupts.cppm  spi.cppm  system.cppm  tim.cppm  uart.cppm
common/: CMakeLists.txt
common/constexpr_tools/: buffer_io.h  chrono_ex.h  crc.h  helpers.h  integer.h  logic.h  math.h  memory_size.h  spans.h  static_mapping.h  static_string.h  std_ex.h  strings.h  type_helpers.h  types.h  values.h
common/fp/: concepts.h  fix.h
common/halstd/: atomic.h  atomic_helpers.h  callback.h  chrono_ex.h  compile_time_assert.h  ratio_ex.h  spans.h  std_ex.h
common/halstd/mp/: helpers.h  type_helpers.h  types.h
common/halstd_module/: callback.cppm  chrono.cppm  halstd.cppm  spans.cppm
common/halstd_module/mp/: helpers.cppm  types.cppm
common/halstd_old/: atomic_helpers.h  chrono_ex.h  logic.h
common/halstd_old/mp/: type_helpers.h  values.h
common/hstd/: atomic.cppm  buffers.cppm  chrono.cppm  crc.cppm  endian.cppm  halstd.cppm  math.cppm  memory.cppm  ratio.cppm  spans.cppm  static_string_builder.cppm
common/hstd/mp/: helpers.cppm  stl_types.cppm  types.cppm  values.cppm
common/hstd_dsp/: hstd_dsp.cppm
common/math/: lut.cppm  math.cppm  math_config.h  settings.cppm
common/math/functions/: common.h  interpolation.cppm  interpolation.h  transcendental.h  utilities.h
common/math/geometry/: coordinate.cppm
common/math/linalg/: vector.h
common/math_old/: concepts.h  functions.h
common/math_old/functions/: common.h  transcendental.h
common/math_old/geometry/: transformation_matrix.h
common/math_old/linalg/: matrix.h
common/sbs/: CMakeLists.txt  sbs.h  sbs_type_name.h
common/sbs/uart/: sbs_uart.h
common/sc/: statechart.h  statechart_callback.h
common/sc_mod/: core.cppm  statechart.cppm
common/vrpc/: CMakeLists.txt  parameters.h  proto_helpers.cpp  proto_helpers.h  server.h  vrpc.h
common/vrpc/builtins/: server_index.h
common/vrpc/common/: proto_helpers.cppm
common/vrpc/nanopb/: nanopb.cppm
common/vrpc/server/: server.cppm
common/vrpc/uart/: vrpc_uart.h  vrpc_uart_client.h  vrpc_uart_decoder.h  vrpc_uart_encode.cpp  vrpc_uart_encode.h  vrpc_uart_frames.h  vrpc_uart_server.h  (+1 more)
common/vrpc_mod/: CMakeLists.txt
core/: CMakeLists.txt
core/hal/: CMakeLists.txt
core/hstd/: array.cppm  buffers.cppm  chrono.cppm  constants.cppm  logic.cppm  spans.cppm
core/math/: concepts.cppm  math.cppm
core/rtos/: CMakeLists.txt
core/sc/: core.cppm  statechart_callback.cppm
impl/: CMakeLists.txt
impl/sil/: gpio.cppm  scheduler.cppm  scheduler_external_event_item.cpp  scheduler_scheduler.cpp  scheduler_thread_item.cpp  sil.cppm  spi.cppm  system.cppm  uart.cppm
impl/stm32g0/: clocks.cppm  clocks.h  dma.cpp  dma.cppm  dma.h  i2s.cpp  i2s.h  interrupts.h  peripheral_ids.h  peripherals.cppm  pin.cpp  pin.cppm  pin.h  pin_interrupt.cpp  pin_interrupt.h  pin_macros.h  spi.cpp  spi.cppm  spi.h  stm32g0.cppm  system.cpp  system.cppm  system.h  tim.cpp  tim.h  uart.cpp  uart.cppm  uart.h
impl/stm32g0_mod/: clocks.cppm  dma.cppm  interrupts.h  peripherals.cppm  pin.cppm  pin_interrupt.cppm  stm32g0.cppm  uart.cppm
impl/stm32g0_old/: clocks.h  dma.cpp  dma.h  i2s.h  interrupts.h  pin_interrupt.h  spi.h  system.cpp  tim.h  uart.cpp  uart.h
impl/stm32g4/: clocks.cpp  clocks.cppm  clocks.h  cordic.h  dma.cpp  dma.cppm  dma.h  i2c.h  interrupts.h  nvic.cppm  peripheral_ids.h  peripherals.cppm  pin.cpp  pin.cppm  pin.h  pin_macros.h  spi.cpp  spi.h  stm32g4.cppm  system.cpp  system.cppm  uart.cpp  uart.cppm  uart.h
impl/stm32g4_old/: clocks.cpp  clocks.h  dma.cpp  dma.h  i2c.cpp  i2c.h  interrupts.h  pin.cpp  spi.cpp  spi.h  system.h  uart.h
impl/stm32h5/: clocks.cppm  dma.cpp  dma.cppm  dma.h  i2c.cppm  i2s.cppm  interrupts.h  nvic.cppm  peripheral_ids.h  peripherals.cppm  pin.cpp  pin.cppm  pin.h  pin_interrupt.cppm  spi.cppm  stm32h5.cppm  system.cppm  tim.cppm  uart.cppm  uart.h  usb.cppm
impl/stm32h5_old/: clocks.h  dma.h  peripheral_ids.h  pin.h  uart.cpp  uart.h
impl/stm32h7/: boot.cpp  boot.h  clocks.h  core.h  dma.cpp  dma.h  hardware_semaphore.cpp  hardware_semaphore.h  interrupts.h  memory_config.cpp  memory_config.h  peripheral_ids.h  pin.cpp  pin.h  power.h  spi.cpp  spi.h  uart.cpp  uart.h
impl/stm32u0/: clocks.cppm  dma.cppm  interrupts.h  nvic.cppm  peripherals.cppm  pin.cppm  stm32u0.cppm  uart.cppm
logging/: CMakeLists.txt
logging/abstract/: CMakeLists.txt
logging/encoding/: binary.cppm
logging/sink/: usb_cdc.cppm
modbus/: CMakeLists.txt
modbus/core/: core.cppm  pdu.cppm
modbus/server/: coil.cppm  server.cppm
modules/logging/: CMakeLists.txt  logging.cppm
modules/rtos/: CMakeLists.txt
modules/rtos_freertos/: CMakeLists.txt  event_group.cppm  freertos.cppm  mutex.cppm  system.cppm  task.cppm
modules/seq/: CMakeLists.txt
rtos/: CMakeLists.txt
rtos/check_rtos/: check_rtos.cppm
rtos/concepts/: rtos_concepts.cppm
rtos/freertos/: event_group.cppm  freertos.cppm  queue.cppm  system.cppm  task.cppm  time.cppm
rtos/rtos_sil/: rtos_sil.cppm
test/: CMakeLists.txt  main.cpp
test/helpers/: buffer.cppm  buffer_builder.cpp  buffer_builder.h  event_loop.h  helpers.cppm  matchers.cppm  matchers.h  proto_helpers.h
test/hstd/: test_buffer.cpp  test_crc.cpp  test_logic.cpp  test_memory.cpp
test/logging/: test_encoding_binary.cpp
test/modbus/: test_encoding_rtu_decoder.cpp  test_encoding_rtu_encoder.cpp  test_modbus_server.cpp  test_modbus_server_frames.cpp  test_server_frames.cpp  test_storage_coil_discrete_input.cpp
test/proto/: radiation_test_setup.proto
tools/stm32_gen_pin_mapping/: Cargo.toml
tools/vrpc_gen/: .gitignore  Cargo.toml
tools/vrpc_reflection/: Cargo.toml  build.rs
usb/: CMakeLists.txt  concepts.cppm  helpers.cppm  usb.cppm
usb/functions/: cdc.cppm
(+250 files in other folders)
